--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="about-text">
 				<p>Ever Legend: Idle RPG brings a fresh take on the idle RPG genre with its stunning visuals, deep strategic gameplay, and immersive world-building. Developed by SoFish Games, this mobile adventure allows players to collect heroes, form powerful teams, and battle through challenging dungeons - all while the game continues to progress even when you're offline.</p>
 				<p>Set in the fantastical realm of Asteria, players must assemble a team of legendary heroes to combat the rising darkness threatening the land. With dozens of unique characters to collect, multiple gameplay modes, and regular content updates, Ever Legend offers countless hours of entertainment for both casual and hardcore gamers alike.  
-				Explore even more thrilling experiences at <a href="https://ojocasino.ca" style="color: #ffffff; text-shadow: 0 0 6px #ffffff;">OJO Casino Canada.</a></p>
+Explore even more thrilling experiences at <a href="https://ojocasino.ca" style="color: #00bfff; text-shadow: 0 0 6px #00bfff;">OJO Casino Canada.</a></p>
 				<p>Whether you have just a few minutes to play or want to dive deep into strategic team building, Ever Legend: Idle RPG offers a flexible gaming experience that adapts to your schedule and playstyle.</p>
 			</div>
 		</div>
